# colours

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
colours/: __init__.py  main.py
tests/: test.py  test_readme.py  tests.py
