[project]
name = "colours"
version = "0.1.0"
description = "An Enum wrapper around Rich colours."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "pre-commit==3.7.1",
    "pylint >=3.1.0, <4.0.0",
    "pytest==8.4.1",
    "pytest-cov >=5.0.0, <6.0.0",
    "ruff>=0.12.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# select = ["ALL"]