[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colours"
version = "0.1.0"
description = "An Enum wrapper around Rich colours."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "pre-commit==3.7.1",
    "pylint >=3.1.0, <4.0.0",
    "pytest==8.4.1",
    "pytest-cov >=5.0.0, <6.0.0",
    "ruff>=0.12.0",
]

[tool.uv]
default-groups = ["dev"]
required-version = ">=0.7.0"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "test*.py"]
addopts = "--cov=colours --cov-report=term-missing"

[tool.ruff]
line-length = 128

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
preview = true
select = [
    "A",
    "AIR",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "COM",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FAST",
    "FIX",
    "FLY",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "INT",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PTH",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "D107",
    "D203",
    "D213",
    "S404",
    "S311",
    "S603",
]

[tool.ruff.lint.pylint]
max-locals = 20
max-args = 10

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "INP001", "ANN201", "S101", "PLR6301"]
